--- a/STYLES/Main.css
+++ b/STYLES/Main.css
@@ -427,5 +427,13 @@ me jode el video 1
     font-size: 14px;
 }
 
+/* section 2 videos */
 
+.section-two {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 14px;
+    margin-right: 29px;
+}
     
