--- a/STYLES/Main.css
+++ b/STYLES/Main.css
@@ -21,6 +21,7 @@ body {
     background-color: #0f0f0f;
     padding: 10px;
     gap: 20px;
+    position: sticky;
 }
 
 
@@ -50,12 +51,16 @@ body {
     cursor: pointer;
 }
 
-/**/
+/*selectores navbar*/
+
+#logo {
+width: 124px;
+}
 
 #burger-icon {
     width: 32px;
     height: 32px;
-    margin-left: 9px;
+    margin-left: 7px;
 }
 
 #burger-icon {
@@ -103,6 +108,10 @@ body {
     cursor: pointer;
 }
 
+#microphone {
+    width: 30px;
+}
+
 #button1 {
     display: flex;
     text-align: center;
@@ -118,9 +127,6 @@ body {
     gap: 8px;
     cursor: pointer;
 }
-
-
-
 
 #notification-logo {
     padding: 2px;
@@ -160,8 +166,6 @@ body {
     grid-template-rows: 60px 1fr;
 }
 
-
-
  /* navegacion inferior,temas */
 
 .themes {
@@ -171,7 +175,7 @@ body {
     height: 56px;
 }
 
-.themes-list {
+.themes-list {                        /*ul*/
     display: flex;
     justify-content: center;
     text-align: center;
@@ -186,6 +190,7 @@ body {
     background-color: #3A3A3A;
     border-radius: 8px;
     padding: 8px;
+    height: 31px;
 }
 
 
@@ -211,7 +216,7 @@ body {
     border-radius:50px;
 }
  
-/* general changes,Videos */
+/* Cambios Generales de Videos (todos) */
 
 .videos {
     margin: 8px;
@@ -227,57 +232,41 @@ body {
     margin-right: 29px;
 }
 
-/* Video1 General Changes (maduro) v-1 */
-
 .video-container {
-    display: grid;
+    display: grid;           
     grid-template-columns: 450px;
     padding-left: 12px;
     cursor: pointer;
 }
- 
-/* general changes,Videos */
 
-.videos {
-    margin: 8px;
-}
-
-#v-1 {                     /*V-1 = video 1 */
-    height: 45.7vh;
-}
-
-.titular-channel-1 {
+.titulares {
     display: flex;
     justify-content: start;
     align-items: start;
     flex-direction: row;
-    gap: 8px
+    gap: 8px;
+    padding: 6px;
 }
 
-/* selecciones especificas video1 (v-1) */
-
-
-
-#image1 {
+.thumbnails-size {
     width: 450px;
     height: 240px;
 }
 
-
-.channel-logo-1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: flex-start ;
-}
-
-#video1-logo {
+.channel-size {
     width: 36px;
     height: 36px;
-
 }
 
-.video-title-1 {
+.options-size {
+    width: 30px;
+    height: 30px;
+}
+
+
+/* selectores de video1 (V-1) */
+
+.video-name-1 {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -295,41 +284,17 @@ body {
     align-items: start;
     text-align: start;
     color: #AAAA;
-    width: 28.3vw;
     font-size: 14px;
     gap: 4px;
+    width: 28.3vw;
 }
 
 
-/** Video2-General Changes **/
 
-.thumbnail-2 {
-    width: 450px;
-    height: 240px;
-}
 
-.titular-channel-2 {
-    display:flex;
-    justify-content: start;
-    align-items: start;
-    flex-direction: row;
-    gap: 8px;
-    padding: 9px;
-}
+/* Selectores de video2 (V-2) */
 
-/* Video2 Specific Changes */
-
-#image2 {
-    width: 450px;
-    height: 239px;
-}
-
-#channel2-logo {
-    width: 36px;
-    height: 36px;
-}
-
-.video-title-2 {
+.video-name-2 {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -337,13 +302,6 @@ body {
     font-size: 16px;
     color: #F1F1F1;
     gap: 7px;
-     /* p{
-        width: 348px;
-        height: 38px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-    } */
 }
 
 .viewers-name-2 {
@@ -357,32 +315,12 @@ body {
     color: #AAAA;
     gap: 4px;
     font-size: 14px;
-    width: 29.8vw;
 }
 
- /* V-3 general changes */
+/*Selectores de video3 (V-3) */
 
-.titular-channel-3 {
-    display:flex;
-    justify-content: start;
-    align-items: start;
-    flex-direction: row;
-    gap: 8px;
-    padding: 9px;
-}
-/*video 3 cambios especificos. */
- 
- #image3 {
-    width: 450px;
-    height: 240px;
- }
 
- #video3-logo {
-    width: 36px;
-    height: 36px;
- }
-
-.video-title-3 {
+.video-name-3 {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -404,30 +342,9 @@ body {
     font-size: 14px;
 }
 
-/* V-4 General Options */
+/* Selectores de Video4 (V-4) */
 
-.titular-channel-4 {
-    display:flex;
-    justify-content: space-between;
-    align-items: start;
-    flex-direction: row;
-    gap: 8px;
-    padding: 6px;
-}
-
-/* V-4 selectores especificos */
-
-#image4 {
-    width: 450px;
-    height: 240px;
-}
-
-#video4-logo {
-    width: 36px;
-    height: 36px;
-}
-
-.video-title-4 {
+.video-name-4 {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -438,10 +355,6 @@ body {
     width: 23.5vw;
 }
 
-#option-v4 {
-    width: 30px;
-    height: 30px;
-}
 
 .viewers-name-4 {
     display: flex;
@@ -456,30 +369,9 @@ body {
     font-size: 14px;
 }
 
-/* V-5 general changes */
+/* Selectores de video5 (V-5) */
 
-.titular-channel-5 {
-    display:flex;
-    justify-content: space-between;
-    align-items: start;
-    flex-direction: row;
-    gap: 8px;
-    padding: 6px;
-}
-
-/* V-5 Cambios Especificos */
-
-#image5 {
-    width: 450px;
-    height: 240px;
-}
-
-#video5-logo {
-    width: 36px;
-    height: 36px;
-}
-
-.video-title-5 {
+.video-name-5 {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -488,11 +380,6 @@ body {
     font-size: 16px;
     gap: 12px;
     width: 23.5vw;
-}
-
-#option-v5 {
-    width: 30px;
-    height: 30px;
 }
 
 .viewers-name-5 {
@@ -508,30 +395,9 @@ body {
     font-size: 14px;
 }
 
-/* V-6 Cambios Generales */
+/* Selectores de video6 (V-6) */
 
-.titular-channel-6 {
-    display:flex;
-    justify-content: start;
-    align-items: start;
-    flex-direction: row;
-    gap: 8px;
-    padding: 6px;
-}
-
-/* V-6 Selectores Especificos */
-
-#image6 {
-    width: 450px;
-    height: 240px;
-}
-
-#video6-logo {
-    width: 36px;
-    height: 36px;
-}
-
-.video-title-6 {
+.video-name-6 {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -539,11 +405,6 @@ body {
     color: #F1F1F1;
     font-size: 16px;
     gap: 12px;
-}
-
-#option-v6 {
-    width: 30px;
-    height: 30px;
 }
 
 .viewers-name-6 {
@@ -559,30 +420,9 @@ body {
     font-size: 14px;
 }
 
-/* V-7 Cambios Generales */
+/* Selectores de Video7 (V-7) */
 
-.titular-channel-7 {
-    display:flex;
-    justify-content: start;
-    align-items: start;
-    flex-direction: row;
-    gap: 8px;
-    padding: 6px;
-}
-
-/* V-7 selectores especificos */
-
-#image7 {
-    width: 450px;
-    height: 240px;
-}
-
-#video7-logo {
-    width: 36px;
-    height: 36px;
-}
-
-.video-title-7 {
+.video-name-7 {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -590,11 +430,6 @@ body {
     color: #F1F1F1;
     font-size: 16px;
     gap: 12px;
-}
-
-#option-v7 {
-    width: 30px;
-    height: 30px;
 }
 
 .viewers-name-7 {
@@ -610,30 +445,9 @@ body {
     font-size: 14px;
 }
 
-/* V-8 Cambios Generales */
+/* Selectores de Video8 (V-8) */
 
-.titular-channel-8 {
-    display:flex;
-    justify-content: start;
-    align-items: start;
-    flex-direction: row;
-    gap: 8px;
-    padding: 6px;
-}
-
-/* V-8 selectores especificos */
-
-#image8 {
-    width: 450px;
-    height: 240px;
-}
-
-#video8-logo {
-    width: 36px;
-    height: 36px;
-}
-
-.video-title-8 {
+.video-name-8 {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -641,11 +455,6 @@ body {
     color: #F1F1F1;
     font-size: 16px;
     gap: 12px;
-}
-
-#option-v8 {
-    width: 30px;
-    height: 30px;
 }
 
 .viewers-name-8 {
@@ -661,30 +470,9 @@ body {
     font-size: 14px;
 }
 
-/* V-9 Cambios Generales */
+/* Selectores de video9 (V-9) */
 
-.titular-channel-9 {
-    display:flex;
-    justify-content: start;
-    align-items: start;
-    flex-direction: row;
-    gap: 8px;
-    padding: 6px;
-}
-
-/* V-9 selectores especificos */
-
-#image9 {
-    width: 450px;
-    height: 240px;
-}
-
-#video9-logo {
-    width: 36px;
-    height: 36px;
-}
-
-.video-title-9 {
+.video-name-9 {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -692,11 +480,6 @@ body {
     color: #F1F1F1;
     font-size: 16px;
     gap: 12px;
-}
-
-#option-v9 {
-    width: 30px;
-    height: 30px;
 }
 
 .viewers-name-9 {
@@ -710,4 +493,105 @@ body {
     color: #AAAA;
     gap: 4px;
     font-size: 14px;
+}
+
+/* RESPONSIVE */
+
+@media (max-width: 767px){ /*tlf */
+    .flex-end {
+        padding: 8px;
+    }
+    .aside-nav {
+        width: 0;
+        height: 0;
+        display: none;
+    }
+    .videos-section {
+        display: grid;
+        display: flex;
+        flex-direction: column;
+        grid-template-columns: 200px;
+        width: 95vw;
+    }
+    .video-name-5 {
+        width: 95vw;
+    }
+    .viewers-name-1 {
+        display: grid;  /*puse esto porque no se pocionaba bien */
+        grid-template-columns: 410px;
+        width: 91vw;
+    }
+    .video-name-4 {
+        width: 100vw;
+    }
+    .logo-burger {
+        width: 60px;
+    }
+    #logo {
+        width: 22vw;
+    }
+    #search {
+        width: 0;
+        height: 0;
+        display: none;
+    }
+    #search-logo{
+        width: 4vw;
+    }
+    .logo-mic {
+        width: 4vw;
+    }
+    #notification-logo {
+        display: flex;
+        justify-content:end;
+        align-items: end;
+    }
+    .create-button {
+        width: 12vw;
+    }
+    .account {
+        display: flex;
+        align-items: center;
+        width: 10vw;
+
+    }
+
+}
+/*tamano tablet 768px */
+
+ @media (min-width: 768px){
+    .search-bar {
+        width: 115px;
+    }
+    .aside-nav {
+        width: 0;
+        height: 0;
+        display: none;
+    }
+    .logo-mic  {
+        width: 0;
+        height: 0;
+        display: none;
+    }
+    .video-container {
+        display: grid;
+        grid-template-columns: 345px;
+    }
+    .thumbnails-size {
+        width: 344px;
+        height: 193px;
+    }
+    .viewers-name-1 {
+        width: 58.5vw;
+    }
+    .viewers-name-2 {
+        width: 58.5vw;
+    }
+    .viewers-name-3 {
+        width: 58.5vw;
+    }
+
+
+
+    
 }
