--- a/STYLES/Main.css
+++ b/STYLES/Main.css
@@ -51,7 +51,7 @@ body {
     cursor: pointer;
 }
 
-/*selectores navbar*/
+
 
 #logo {
 width: 124px;
@@ -154,7 +154,7 @@ width: 124px;
 }
 
 
-/* *Main Content* */
+/* Main Content */
 
 .main {
     display: grid;
@@ -175,7 +175,7 @@ width: 124px;
     height: 56px;
 }
 
-.themes-list {                        /*ul*/
+.themes-list {                        
     display: flex;
     justify-content: center;
     text-align: center;
@@ -271,22 +271,20 @@ width: 124px;
     flex-direction: column;
     justify-content: flex-start;
     text-align: start;
-    color: #F1F1F1;
     font-size: 16px;
+    color: #F1F1F1;
+    gap: 7px;
 }
 
 .viewers-name-1 {
-    display: flex;
     display: grid;
     grid-template-columns: 350px;
-    flex-direction: column;
     justify-content: center;
     align-items: start;
     text-align: start;
     color: #AAAA;
     font-size: 14px;
     gap: 4px;
-    width: 28.3vw;
 }
 
 
@@ -305,10 +303,8 @@ width: 124px;
 }
 
 .viewers-name-2 {
-    display: flex;
     display: grid;
     grid-template-columns: 350px;
-    flex-direction: column;
     justify-content: center;
     align-items: start;
     text-align: start;
@@ -516,11 +512,6 @@ width: 124px;
     .video-name-5 {
         width: 95vw;
     }
-    .viewers-name-1 {
-        display: grid;  /*puse esto porque no se pocionaba bien */
-        grid-template-columns: 410px;
-        width: 91vw;
-    }
     .video-name-4 {
         width: 100vw;
     }
@@ -555,7 +546,16 @@ width: 124px;
         width: 10vw;
 
     }
-
+    .viewers-name-1 {
+    display: grid;
+    grid-template-columns: 350px;
+    justify-content: center;
+    align-items: start;
+    text-align: start;
+    color: #AAAA;
+    font-size: 14px;
+    gap: 4px;
+    }
 }
 /*tamano tablet 768px */
 
@@ -580,18 +580,15 @@ width: 124px;
     .thumbnails-size {
         width: 344px;
         height: 193px;
-    }
+    } 
     .viewers-name-1 {
-        width: 58.5vw;
+    display: grid;
+    grid-template-columns: 250px;
+    justify-content: center;
+    align-items: start;
+    text-align: start;
+    color: #AAAA;
+    font-size: 14px;
+    gap: 4px;
     }
-    .viewers-name-2 {
-        width: 58.5vw;
-    }
-    .viewers-name-3 {
-        width: 58.5vw;
-    }
-
-
-
-    
 }
